--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>demo1</title>
 </head>
 <body>
-<script src="./src/bundle.js"/>
+
 <div id="example">123</div>
 </body>
+<script type="text/javascript" src="./src/bundle.js">
+</script>
 </html>
