--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>demo1</title>
+    <link rel="stylesheet" href="./src/css/pc.css">
 </head>
 <body>
 
-<div id="example">123</div>
+<div id="mainContainer">123</div>
 </body>
-<script type="text/javascript" src="./src/bundle.js">
+<script type="text/javascript" src="http://localhost:8080/bundle.js">
 </script>
 </html>
