--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>demo1</title>
     <link rel="stylesheet" href="./src/css/pc.css">
+    <link rel="stylesheet" href="./src/css/mobile.css">
 </head>
 <body>
 
